build: lock node 18.20.4 version

--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
+  "engines": {
+    "node": "18.20.4"
+  },
   "private": true
 }
