feat: add check author email on pre-commit hook

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,3 +2,8 @@ commit-msg:
   scripts:
     "commitlint.sh":
       runner: bash
+
+pre-commit:
+  scripts:
+    "author-email.sh":
+      runner: bash
