--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "jest-expo": "~51.0.3",
     "lefthook": "^1.8.2",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "^5.6.3"
   },
   "engines": {
     "node": "18.20.4"
