feat: lint on pre-commit

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "npx @biomejs/biome check --write ."
   },
   "jest": {
     "preset": "jest-expo"
