--- a/lefthook.yml
+++ b/lefthook.yml
@@ -7,3 +7,9 @@ pre-commit:
   scripts:
     "author-email.sh":
       runner: bash
+  commands:
+    lint:
+      glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
+      run: npx @biomejs/biome check --write --no-errors-on-unmatched --files-ignore-unknown=true --colors=off {staged_files}
+      stage_fixed: true
+
