--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -16,3 +16,16 @@ jobs:
           version: latest
       - name: Run Biome
         run: biome ci .
+  check_typescript:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18.x'
+      - name: Install Dependencies
+        run: npm install
+      - name: Check TypeScript
+        run: tsc
