--- a/lefthook.yml
+++ b/lefthook.yml
@@ -12,4 +12,6 @@ pre-commit:
       glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
       run: npx @biomejs/biome check --write --no-errors-on-unmatched --files-ignore-unknown=true --colors=off {staged_files}
       stage_fixed: true
-
+    check-typescript:
+      glob: "*.{ts,tsx}"
+      run: tsc --noEmit
