--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": []
+    "ignore": ["ios", "android", "node_modules"]
   },
   "formatter": {
     "enabled": true,
