fix: lefthook check-typescript using vscode

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -14,4 +14,4 @@ pre-commit:
       stage_fixed: true
     check-typescript:
       glob: "*.{ts,tsx}"
-      run: tsc --noEmit
+      run: npx tsc --noEmit
